# FIVM-VLDBJ

./: .gitignore
compiler/: build.sbt
examples/: logs_q10_sf1_dynamic.csv  logs_q10_sf1_static.csv  run_tpch_q10_sf0p1.sh  run_tpch_q10_sf1.sh
examples/aux/: data_schema.py  generate_1-ivm_path.py  generate_path_m3.py  generate_vo.py  generate_vo_files_backup.py  path_query.sh  retailer_schema.py  schema_backup.py  tpch_schema.py  variable_order.py
examples/include/ring/: ring_jobs_query0.hpp  ring_jobs_query1.hpp  ring_jobs_query1_movie_companies.hpp  ring_jobs_query1_title.hpp
examples/jobs/: run_query_0.sh  run_query_1.sh
examples/jobs/output/: jobs-1-F-IVM-_BATCH_1000.txt
examples/jobs/queries/: 0.sql  0.txt  1.sql  1.txt
examples/maximal-experiments/: run_all.sh  run_eager.sh  run_hybrid.sh  run_lazy.sh  run_query1.sh  run_test.sh
examples/maximal-experiments/queries/: 1.txt  tpch-1-eager.sql  tpch-1-lazy.sql  tpch01_vo1.txt  tpch_FQ1_lazy.sql  tpch_query_1.sql  tpch_test.sql  tpch_test.txt
examples/path-experiments/: run_1-ivm.sh  run_all.sh  run_dbt.sh  run_f-ivm.sh  run_left-deep.sh  switch_data.sh
examples/queries/retailer/: retailer_sum.sql
examples/queries/tpch/: tpch_query10_predefined.sql  tpch_query10_predefined_sf0p1_dynamic.sql  tpch_query10_predefined_sf0p1_static.sql  tpch_query10_predefined_sf1_dynamic.sql  tpch_query10_predefined_sf1_static.sql
examples/src/application/: application.hpp
examples/src/lib/: csvreader.hpp
examples/static-dynamic-experiments/: result.ipynb  run_retailer_m3.sh
examples/static-dynamic-experiments/queries/: retailer_full.m3  retailer_full.sql  retailer_full_INVENTORY.m3  retailer_full_INVENTORY.sql  retailer_sum.m3  retailer_sum_INVENTORY.m3  retailer_sum_INVENTORY_WEATHER.m3  retailer_sum_INVENTORY_WEATHER.sql  retailer_sum_INVENTORY_flat.m3
examples/static-experiments/: plot_q3.sh  plot_results.py  run_all.sh  run_q10.sh  run_q3.sh  tpch_query03_results.csv
examples/static-experiments/queries/: tpch_query03_nopred_vo1.sql  tpch_query03_nopred_vo2.sql  tpch_query03_vo1.sql  tpch_query03_vo1.txt  tpch_query03_vo2.sql  tpch_query03_vo2.txt  tpch_query10_vo1.txt  tpch_query10_vo1_nopred.sql  tpch_query10_vo2.sql  tpch_query10_vo2.txt  tpch_query10_vo2_nopred.sql  tpch_query10_vo3.txt  tpch_query10_vo3_nopred.sql
examples/tods26-experiments/: README.md  run_q10_count_matrix.sh  run_q10_matrix.sh
examples/tods26-experiments/doc/: examples.tex  main.tex  q10-all-vo.md  q10_all_vo_cost.py
examples/tods26-experiments/output/: tpch_q10_cust_nation_order_sf0p1_dynamic_pred_off.csv  (+43 more)
examples/vos-experiments/: run_job1_vos.sh  run_job2_vos.sh  run_retailer_m3.sh  run_retailer_vos.sh  run_tpch_vos.sh
runtime/: CMakeLists.txt  vcpkg.json
runtime/include/: application.hpp  common.hpp  zerialize.hpp
runtime/include/dbtoaster/: mmap.hpp  string.hpp
runtime/include/zerialize/: format.hpp  input_adaptor.hpp  message.hpp  output_adaptor.hpp  queue.hpp
runtime/test/: zerialize_test.cpp
scripts/: generate-code.sh
(+277 files in other folders)
